# PDF_OFD_Converter

./: .gitattributes  .gitignore  .project  CHANGELOG.md  CHINA-LINUX-GUIDE.md  CLAUDE.md  CONVEYOR-GUIDE.md  CONVEYOR-NOTES.md  DEVELOPER-GUIDE.md  FONT-CONFIGURATION.md  JSON-CONFIG-GUIDE.md  PLAN_NEW_UI.md  README.md  README_NEW.md  README_TW.md  SEARCHABLE_OFD_NOTES.md  SOUL.md  TEXTLAYER-CONFIG-GUIDE.md  config-details.md  config-linux.json  config-windows.json  conveyor.conf  dependency-reduced-pom.xml  entities.json  mempalace.yaml  pom.xml  repack-into-zip.ps1  searchable_method.md  start.bat
.claude/: settings.json  settings.local.json
configs/: config-test-pdf-red.json  config-test-red.json
dist-test/: AppxBlockMap.xml  AppxManifest.xml  AppxSignature.p7x  [Content_Types].xml  resources.pri
docs/plans/: 2026-04-11-code-quality-improvement.md  2026-04-12-round2-improvement.md
mempalace/hooks/: mempal_precompact_hook.sh  mempal_save_hook.sh
output/: appcast-aarch64.rss  appcast-amd64.rss  download.html  install.ps1  jpeg2pdf-ofd-cli.appinstaller  jpeg2pdf-ofd-cli.crt  launch.mac  metadata.properties
output/debian/: InRelease  Packages  Packages.xz  Release
pdf-converter-ui/: app.py  pyproject.toml
pdf-converter-ui/api/: js_api.py
pdf-converter-ui/core/: bridge.py  config.py  converter.py
pdf-converter-ui/settings/: default.json
pdf-converter-ui/tests/: test_bridge.py
pdf-converter-ui/ui/: index.html
scripts/: build-conveyor.ps1  repack-into-zip.ps1
src/main/resources/: logback.xml  version.properties
test-fixed/lib/security/: cacerts
(+22 files in other folders)
